--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -21,7 +21,7 @@
     </div>
       <div id="img">
 
-        <a href="newLandingPage.html"><svg class="text-white" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#fff"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></a>
+        <a href="index.html"><svg class="text-white" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#fff"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></a>
       </div>
     </nav>
     <!-- <div id="nav">
