--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
           <!-- Image (Bottom on mobile, Right on desktop) -->
           <div class="flex-shrink-0 w-full lg:w-auto max-w-full">
             <img
-              src="/CyberSecurity Landing Page (Community)/cyber security 1.png"
+              src="cyber security 1.png"
               alt="Cybersecurity Illustration"
               class="h-auto w-full max-w-md mx-auto lg:mx-0 lg:h-[402px] lg:w-auto object-cover"
             />
